--- a/index.html
+++ b/index.html
@@ -24,11 +24,22 @@
         music tracks courtesy of http://freemusicarchive.org/genre/Chiptune/
         -->
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
+        <script href="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+        <script href="https://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.2.3/jquery-confirm.min.css">
+<script href="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.2.3/jquery-confirm.min.js"></script>
+        <link href="https://code.jquery.com/ui/1.10.4/themes/ui-lightness/jquery-ui.css" rel="stylesheet">
+        <script href="https://cdn.rawgit.com/bureyburey/Scoreboard-Module/master/scoreboard.js"></script>
+        <script href="https://cdn.rawgit.com/bureyburey/Scoreboard-Module/master/scoreboard_capped.js"></script>
+        <script href="https://cdn.rawgit.com/bureyburey/Explosion/master/explosion.pr.js"></script>
+        <script href="https://www.gstatic.com/firebasejs/4.1.1/firebase.js"></script>
+        
+        <link src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
         <script src="https://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.2.3/jquery-confirm.min.css">
+        <link rel="stylesheet" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.2.3/jquery-confirm.min.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.2.3/jquery-confirm.min.js"></script>
-        <link href="https://code.jquery.com/ui/1.10.4/themes/ui-lightness/jquery-ui.css" rel="stylesheet">
+        <link src="https://code.jquery.com/ui/1.10.4/themes/ui-lightness/jquery-ui.css" rel="stylesheet">
         <script src="https://cdn.rawgit.com/bureyburey/Scoreboard-Module/master/scoreboard.js"></script>
         <script src="https://cdn.rawgit.com/bureyburey/Scoreboard-Module/master/scoreboard_capped.js"></script>
         <script src="https://cdn.rawgit.com/bureyburey/Explosion/master/explosion.pr.js"></script>
@@ -263,7 +274,7 @@ function DefendTheCastle(){
         G:2.0,
         poop_m:0.5
     };
-    var CASTLE_SPRITES = ["🏯","🏫","🏰"];
+    var CASTLE_SPRITES = ["🏯","🏫","🏰","CASTLE"];
     var CASTLE_SPRITE = CASTLE_SPRITES[randVal(0, CASTLE_SPRITES.length - 1)];
     var scoreboard = new Scoreboard(options);
     randomCanvasColor();
@@ -946,7 +957,7 @@ window.onload = DefendTheCastle;
     </script>
         <center>
             <div id="top-message">
-                <span style="color:white;margin:3px;display:block;"><h3 style="display:inline;">Thanks For 2+ Upvotes\Likes 🤗</h3> &lt;by: Daniel&gt;</span>
+                <span style="color:white;margin:3px;display:block;"><h3 style="display:inline;">Thanks For 16+ Upvotes\Likes 🤗</h3> &lt;by: Daniel&gt;</span>
                 <a href="https://www.pjgalbraith.com/drawing-animated-curves-javascript/">Original Bezier Curve Animation Source Code</a>
             </div>
             <audio controls loop id="audio-player">
